adds user display logic, if user hp is above 0, user img is upright, if user is HP is 0 user img shifts 90degrees and is darker

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             </section>
             <div id="game-container">
                 <section id="user-container" class="user card">
-                    <p class="stat">20</p>
+                    <p id="user-hp" class="stat">20</p>
                     <img src="/assets/paper-mario.png" alt="Mario" id="user-img" />
                 </section>
                 <section id="opp-container">
