adds scoreboard functionality, tracks HP and stars gained from kills

--- a/index.html
+++ b/index.html
@@ -35,7 +35,15 @@
             </section>
             <div id="game-container">
                 <section id="user-container" class="user card">
-                    <p id="user-hp" class="stat">20</p>
+                    <table id="scoreboard">
+                        <tr>
+                            <td>HP:</td>
+                            <td id="user-hp"></td>
+                            <td>⭐:</td>
+                            <td id="user-kills"></td>
+                        </tr>
+                    </table>
+                    <p id="user-name" class="stat">Mario</p>
                     <img src="/assets/paper-mario.png" alt="Mario" id="user-img" />
                 </section>
                 <section id="opp-container">
