adds the display of opponents/goblins using the renderfunction showing name, HP, and their portrait when alive, and a tomb stone when dead when changing hp values in state

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
                         <button id="add-opp-button">+</button>
                     </form>
                     <ul id="opp-list">
-                        <li class="opp stat">
+                        <li class="opp">
                             <span class="stat">5</span>
                             <img class="opp-img" alt="goombella" src="/assets/goombella-opp.png" />
                             <span class="name">Goombella</span>
