adds displayMessage function to show initial message, adds all variables/lists necessary for game logic, commented out for now to pass CI

--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
             <section id="battle-log">
                 <p>battle log</p>
             </section>
+            <section id="message-display">
+                <p>message</p>
+            </section>
             <div id="game-container">
                 <section id="user-container" class="user card">
                     <table id="scoreboard">
