adds add goblin functionality, adds a random opponent from a list of different types, adds it to the list, and a message is shown with their name

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                 <section id="opp-container">
                     <form action="add opponent" id="add-opp-form">
                         <label for="opp-input">Add Opponent</label>
-                        <input type="text" id="opp-input" />
+                        <input name="name" id="opp-input" />
                         <button id="add-opp-button">+</button>
                     </form>
                     <ul id="opp-list">
