--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 
     <body>
         <header>
-            <img class="logo" src="assets/html_css_js.png" alt="logo" />
-            <h1>Paper Mario JS: Get them Goombahs</h1>
+            <img class="logo" src="assets/banner - Copy.png" alt="logo" />
+            <!-- <h1>Paper Mario JS: Get them Goombahs</h1> -->
         </header>
 
         <main>
