adds play again logic, hides play again button while user is alive, removes the class of hidden when user dies

--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                     </table>
                     <p id="user-name" class="stat">Mario</p>
                     <img src="/assets/paper-mario.png" alt="Mario" id="user-img" />
+                    <button id="play-again-button" class="hidden">Play again</button>
                 </section>
                 <section id="opp-container">
                     <form action="add opponent" id="add-opp-form">
